--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -100,7 +100,7 @@ services:
       ND_LASTFM_SECRET: ${LASTFM_SHARED_SECRET}
       # https://www.navidrome.org/docs/usage/backup/
       # Note: The optional backup process ONLY backs up the database (users, play counts, etc.). It does NOT back up music files or the config.
-      ND_BACKUP_PATH: /backup 
+      ND_BACKUP_PATH: /backups
       ND_BACKUP_SCHEDULE: "0 0 * * *" # every 24 hours at 12am
       ND_BACKUP_COUNT: 7
     volumes:
