--- a/hosts/thebridge/thebridge.yml
+++ b/hosts/thebridge/thebridge.yml
@@ -56,7 +56,7 @@ services:
       thebridge-net:
 
 # --------------------------------------------------------------------
-# Uptime Kuma
+# Uptime Kuma: https://github.com/louislam/uptime-kuma/blob/1.23.X/docker/docker-compose.yml
 # --------------------------------------------------------------------
 
   uptime-kuma:
@@ -293,8 +293,8 @@ services:
       - '--path.rootfs=/host'
     volumes:
       - '/:/host:ro,rslave'
-    ports:
-      - 9100:9100
+#   ports:
+#     - 9100:9100
     network_mode: host
 
 # -----------------------------------------------------------------
@@ -312,8 +312,8 @@ services:
         limits:
           cpus: '0.5'
           memory: 256M
-    ports:
-      - 8083:8080
+#   ports:
+#     - 8080:8080
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
