--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -192,8 +192,8 @@ services:
       - '--path.rootfs=/host'
     volumes:
       - '/:/host:ro,rslave'
-    ports:
-      - 9100:9100
+#   ports:
+#     - 9100:9100
     network_mode: host
 
 # -----------------------------------------------------------------
@@ -211,8 +211,9 @@ services:
         limits:
           cpus: '0.5'
           memory: 256M
-    ports:
-      - "8080:8080"
+    env_file: galaxy.env
+#   ports:
+#     - 8080:8080
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
