--- a/hosts/thebridge/thebridge.yml
+++ b/hosts/thebridge/thebridge.yml
@@ -336,9 +336,15 @@ services:
         limits:
           cpus: '0.5'
           memory: 256M
+    healthcheck:
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - ./loki/loki-config.yaml:/etc/loki/config.yaml
     ports:
-      - "3100:3100"
-    command: -config.file=/etc/loki/local-config.yaml
+      - 3100:3100
     networks:
       loki:
 
@@ -359,17 +365,17 @@ services:
           memory: 256M
     depends_on:
       - loki
-    pull_policy: always
     volumes:
+      - ./alloy/alloy-config.yaml:/etc/alloy/config.alloy:ro
       - /var/log:/var/log
-      - ./alloy/config:/etc/alloy
     command: 
       - run
       - /etc/alloy/config.alloy
       - --storage.path=/var/lib/alloy/data
-      - --server.http.listen-addr=0.0.0.0:12345
+      - --server.http.listen-addr=0.0.0.0:3200
     ports:
-      - 12345:12345 # dashboard port
+      - 3200:3200 # dashboard port
+      - "514:514/udp"  # Syslog input from router
     networks:
       loki:
 
