--- a/hosts/thebridge/thebridge.yml
+++ b/hosts/thebridge/thebridge.yml
@@ -370,7 +370,7 @@ services:
       - /var/log:/var/log
     command: 
       - run
-      - /etc/alloy/config.alloy
+#      - /etc/alloy/config.alloy
       - --storage.path=/var/lib/alloy/data
       - --server.http.listen-addr=0.0.0.0:3200
     ports:
