--- a/hosts/thebridge/thebridge.yml
+++ b/hosts/thebridge/thebridge.yml
@@ -364,7 +364,7 @@ services:
           cpus: '0.5'
           memory: 256M
     volumes:
-      - ./alloy/config.alloy:/etc/alloy/config.alloy:ro # File must be created prior to containe>
+      - ./alloy/config.alloy:/etc/alloy/config.alloy:ro # File must be created prior to container creation.
       - /var/log:/var/log
     command:
       - run
@@ -374,7 +374,7 @@ services:
       - --stability.level=experimental
     ports:
       - 3200:3200 # dashboard port
-      - "514:514/udp"  # Syslog input from router
+#      - "514:514/udp"  # Syslog input from router
     depends_on:
       - loki
     networks:
