Change fullscreen shortcut

--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -151,7 +151,7 @@ map kitty_mod+c copy_to_clipboard
 map kitty_mod+v paste_from_clipboard
 
 #: Toggle fullscreen
-map kitty_mod+f11 toggle_fullscreen
+map f11 toggle_fullscreen
 
 #: Edit config file
 map kitty_mod+f2 edit_config_file
