--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -107,10 +107,10 @@ background_tint_gaps 1.0
 #: Fonts ---------------------------------------------------------------------------
 # ----------------------------------------------------------------------------------
 
-font_family      "MesloLGS NF"
-bold_font        "MesloLGS NF Bold"
-italic_font      "MesloLGS NF Italic"
-bold_italic_font "MesloLGS NF Bold Italic"
+font_family      family="MesloLGS NF"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 font_size 11.0
 
