--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -106,6 +106,7 @@ background_tint_gaps 1.0
 # ----------------------------------------------------------------------------------
 #: Fonts ---------------------------------------------------------------------------
 # ----------------------------------------------------------------------------------
+# 'kitty list-fonts' to show available fonts and have kitty write choice to kitty.config
 
 font_family      family="MesloLGS NF"
 bold_font        auto
