--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -18,6 +18,7 @@ services:
           cpus: '6'
           memory: 8192M
     runtime: nvidia
+    env_file: galaxy.env
     environment:
       - PUID=${UID}
       - PGID=${GID}
@@ -59,6 +60,7 @@ services:
           memory: 512M
     cap_add:
       - NET_ADMIN
+    env_file: galaxy.env
     environment:
       - PUID=${UID}
       - PGID=${GID}
@@ -89,6 +91,7 @@ services:
         limits:
           cpus: '1'
           memory: 2048M
+    env_file: galaxy.env
     environment:
       # Optional: put your config options customization here. Examples:
       ND_SCANSCHEDULE: 1h
@@ -113,10 +116,51 @@ services:
       navidrome_net:
 
 # ============================================================== #
+# multi-scrobbler: https://github.com/wger-project/docker/blob/master/docker-compose.yml
+# ============================================================== #
+
+  multi-scrobbler:
+    image: foxxmd/multi-scrobbler:${MULTI-SCROB_VERS:-latest}
+    container_name: multi-scrobbler
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.2'
+          memory: 256M
+    env_file: galaxy.env
+    environment:
+      - TZ=${TIMEZONE} # Specify timezone from TZ Database name found here https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+      - MALOJA_URL=http://maloja:42010
+      - MALOJA_API_KEY=${MALOJA_API_KEY}
+      - PUID=${UID} # required if running docker on linux host, see main README Docker setup instructions
+      - PGID=${GID} # required if running docker on linux host, see main README Docker setup instructions
+      #- SPOTIFY_CLIENT_ID=
+      #- SPOTIFY_CLIENT_SECRET=
+      #- SPOTIFY_REDIRECT_URI=http://multi-scrobbler-host-IP:9078/callback # Need to be whitelisted in Spotify dashboard and is used for 
+      # creating the connection first time
+
+      # set if using a source/client with redirect URI that you have not explicitly set and MS is NOT running on the same machine that you 
+      # will view the dashboard from.
+      # EX: You will view MS dashboard at 'http://192.168.0.101:9078' -> set BASE_URL=http://192.168.0.101:9078
+      #- BASE_URL=http://MyHostIP:9078
+    volumes:
+      - "./config:/config"
+    ports:
+      - 9078:9078 # first port is the HOST port multi-scrobbler will serve UI and API on
+    networks:
+      scrobbler_net:
+
+# ============================================================== #
 # Maloja: https://github.com/krateng/maloja/blob/master/example-compose.yml
 # ============================================================== #
 
-# Needs additional config as per https://github.com/krateng/maloja/blob/master/settings.md
+# Additional configuration: https://github.com/krateng/maloja/blob/master/settings.md
 
   maloja:
     image: krateng/maloja:${MALOJA_VERS:-latest} # https://hub.docker.com/r/krateng/maloja/tags
@@ -129,19 +173,22 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1'
+          cpus: '0.5'
           memory: 256M
+    env_file: galaxy.env
     environment:
       - PUID=${UID}
       - PGID=${GID}
       - MALOJA_FORCE_PASSWORD=${MALOJA_ADMIN_PASS}
       - MALOJA_DATA_DIRECTORY=/data
-    ports:
-    - "42010:42010"
+      - MALOJA_PROXY_IMAGES=TRUE # Whether third party images should be downloaded and served directly by Maloja (instead of just linking their URL).
+      - MALOJA_TIMEZONE=${TIMEZONE}
     volumes:
-    - ./maloja/data:/data
+      - ./maloja/data:/data
+    ports:
+      - "42010:42010"
     networks:
-      maloja_net:
+      scrobbler_net:
 
 # ============================================================== #
 # Audiobookshelf: https://www.audiobookshelf.org/docs/#docker-compose-install
@@ -218,13 +265,10 @@ services:
     env_file: galaxy.env
     environment:
       - TZ=${TIMEZONE:-Etc/UTC}
-#    user: "${UID}:${GID}"
     command:
       - '--path.rootfs=/host'
     volumes:
       - '/:/host:ro,rslave'
-#   ports:
-#     - 9100:9100
     network_mode: host
 
 # ============================================================== #
@@ -243,8 +287,6 @@ services:
           cpus: '0.5'
           memory: 256M
     env_file: galaxy.env
-#   ports:
-#     - 8080:8080
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -260,5 +302,6 @@ volumes:
 networks:
   jelly_net:
   navidrome_net:
+  scrobbler_net:
   audiobookshelf_net:
   audiobookrequest_net:
