--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -111,13 +111,16 @@ services:
       - ./navidrome/backups:/backups
       - ${MUSIC_PATH}:/music:ro
     ports:
-      - "4533:4533"
+      - 4533:4533
     networks:
       navidrome_net:
+      scrobbler_net:
 
 # ============================================================== #
 # multi-scrobbler: https://github.com/wger-project/docker/blob/master/docker-compose.yml
 # ============================================================== #
+
+# Configuration: https://foxxmd.github.io/multi-scrobbler/docs/configuration/
 
   multi-scrobbler:
     image: foxxmd/multi-scrobbler:${MULTI-SCROB_VERS:-latest}
@@ -135,24 +138,21 @@ services:
           memory: 256M
     env_file: galaxy.env
     environment:
-      - TZ=${TIMEZONE} # Specify timezone from TZ Database name found here https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+      - TZ=${TIMEZONE}
+      - BASE_URL=${MS_BASE_URL}
+      - SUBSONIC_USER=${SUBSONIC_USER}
+      - SUBSONIC_PASSWORD=${SUBSONIC_PASSWORD}
+      - SUBSONIC_URL=${SUBSONIC_URL}
+      - LZ_USER=${LISTENBRAINZ_USER}
+      - LZ_TOKEN=${LISTENBRAINZ_TOKEN}
       - MALOJA_URL=http://maloja:42010
       - MALOJA_API_KEY=${MALOJA_API_KEY}
-      - PUID=${UID} # required if running docker on linux host, see main README Docker setup instructions
-      - PGID=${GID} # required if running docker on linux host, see main README Docker setup instructions
-      #- SPOTIFY_CLIENT_ID=
-      #- SPOTIFY_CLIENT_SECRET=
-      #- SPOTIFY_REDIRECT_URI=http://multi-scrobbler-host-IP:9078/callback # Need to be whitelisted in Spotify dashboard and is used for 
-      # creating the connection first time
-
-      # set if using a source/client with redirect URI that you have not explicitly set and MS is NOT running on the same machine that you 
-      # will view the dashboard from.
-      # EX: You will view MS dashboard at 'http://192.168.0.101:9078' -> set BASE_URL=http://192.168.0.101:9078
-      #- BASE_URL=http://MyHostIP:9078
+      - PUID=${UID}
+      - PGID=${GID}
     volumes:
-      - "./config:/config"
+      - ./multi-scrobbler/config:/config
     ports:
-      - 9078:9078 # first port is the HOST port multi-scrobbler will serve UI and API on
+      - 9078:9078 # UI and API
     networks:
       scrobbler_net:
 
@@ -160,7 +160,7 @@ services:
 # Maloja: https://github.com/krateng/maloja/blob/master/example-compose.yml
 # ============================================================== #
 
-# Additional configuration: https://github.com/krateng/maloja/blob/master/settings.md
+# Configuration: https://github.com/krateng/maloja/blob/master/settings.md
 
   maloja:
     image: krateng/maloja:${MALOJA_VERS:-latest} # https://hub.docker.com/r/krateng/maloja/tags
@@ -186,7 +186,7 @@ services:
     volumes:
       - ./maloja/data:/data
     ports:
-      - "42010:42010"
+      - 42010:42010 # UI
     networks:
       scrobbler_net:
 
