--- a/hosts/galaxy/galaxy.yaml
+++ b/hosts/galaxy/galaxy.yaml
@@ -123,7 +123,7 @@ services:
 # Configuration: https://foxxmd.github.io/multi-scrobbler/docs/configuration/
 
   multi-scrobbler:
-    image: foxxmd/multi-scrobbler:${MULTI-SCROB_VERS:-latest}
+    image: foxxmd/multi-scrobbler:${MULTI_SCROB_VERS:-latest}
     container_name: multi-scrobbler
     security_opt:
       - no-new-privileges:true
@@ -235,7 +235,7 @@ services:
       resources:
         limits:
           cpus: '1'
-          memory: 512M
+          memory: 256M
     env_file: galaxy.env
     volumes:
       - audiobookrequest-config:/config
@@ -259,7 +259,7 @@ services:
       resources:
         limits:
           cpus: '0.5'
-          memory: 128M
+          memory: 64M
     pid: host
     env_file: galaxy.env
     environment:
@@ -284,7 +284,7 @@ services:
       resources:
         limits:
           cpus: '0.5'
-          memory: 256M
+          memory: 128M
     env_file: galaxy.env
     volumes:
       - /:/rootfs:ro
