--- a/hosts/hyperion/wger.yaml
+++ b/hosts/hyperion/wger.yaml
@@ -1,23 +1,32 @@
-#
-# Please consult the `Deployment` section in the docs if you want to deploy
-# this. You *need* to keep this nginx service, even if you have your own,
-# otherwise the static files will not be served correctly! If you do remove
-# it, configure yours similarly to what's in config/nginx.conf
-# Also take a look at the "Static files" section in the .env file
-
 services:
+
+# ============================================================== #
+# wger: https://github.com/wger-project/docker/tree/master
+# ============================================================== #
+
   web:
-    image: wger/server:latest
+    image: wger/server:${WGER_VERS:-latest}
+    container_name: wger
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
     depends_on:
       db:
         condition: service_healthy
       cache:
         condition: service_healthy
     env_file:
-      - ./config/prod.env
+      - ./wger.env
     volumes:
-      - static:/home/wger/static
-      - media:/home/wger/media
+      - wger-static:/home/wger/static
+      - ./wger/media:/home/wger/media
     expose:
       - 8000
     healthcheck:
@@ -26,35 +35,33 @@ services:
       timeout: 5s
       start_period: 300s
       retries: 5
-    restart: unless-stopped
+    networks:
+      wger_net:
 
-  nginx:
-    image: nginx:stable
-    depends_on:
-      - web
-    volumes:
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
-      - static:/wger/static:ro
-      - media:/wger/media:ro
-    ports:
-      - "80:80"
-    healthcheck:
-      test: service nginx status
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-    restart: unless-stopped
+# ============================================================== #
 
   db:
     image: postgres:15-alpine
+    container_name: wger-db
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 128M
+    env_file:
+      - ./wger.env
     environment:
-      - POSTGRES_USER=wger
-      - POSTGRES_PASSWORD=wger
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=wger
-      - TZ=Europe/Berlin
+      - TZ=America/Denver
     volumes:
-      - postgres-data:/var/lib/postgresql/data/
+      - ./wger/postgres-data:/var/lib/postgresql/data/
     expose:
       - 5432
     healthcheck:
@@ -63,15 +70,61 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    networks:
+      wger_net:
+
+# ============================================================== #
+
+  nginx:
+    image: nginx:stable
+    container_name: wger-nginx
+    security_opt:
+      - no-new-privileges:true
     restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 64M
+    depends_on:
+      - web
+    volumes:
+      - wger-static:/wger/static:ro
+      - ./wger/config/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./wger/media:/wger/media:ro
+    ports:
+      - "8844:80"
+    healthcheck:
+      test: service nginx status
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    networks:
+      wger_net:
+
+# ============================================================== #
 
   cache:
     image: redis
+    container_name: wger-cache
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
     expose:
       - 6379
     volumes:
-      - ./config/redis.conf:/usr/local/etc/redis/redis.conf
-      - redis-data:/data
+      - wger-redis-data:/data
+      - ./wger/config/redis.conf:/usr/local/etc/redis/redis.conf
     command: [ "redis-server", "/usr/local/etc/redis/redis.conf"]
     healthcheck:
       test: redis-cli ping
@@ -79,19 +132,29 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
-    restart: unless-stopped
+    networks:
+      wger_net:
 
-    # You probably want to limit the memory usage of the cache, otherwise it might
-    # hog all the available memory. Remove or change according to your needs.
-    #mem_limit: 5gb
+# ============================================================== #
 
   celery_worker:
     image: wger/server:latest
+    container_name: wger-worker
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
     command: /start-worker
     env_file:
-      - ./config/prod.env
+      - ./wger.env
     volumes:
-      - media:/home/wger/media
+      - ./wger/media:/home/wger/media
     depends_on:
       web:
         condition: service_healthy
@@ -101,29 +164,43 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
+    networks:
+      wger_net:
+
+# ============================================================== #
 
   celery_beat:
     image: wger/server:latest
+    container_name: wger-beat
+    security_opt:
+      - no-new-privileges:true
+    restart: unless-stopped
+    tmpfs:
+      - /tmp
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
     command: /start-beat
-    volumes:
-      - celery-beat:/home/wger/beat/
     env_file:
-      - ./config/prod.env
+      - ./wger.env
+    volumes:
+      - wger-celery-beat:/home/wger/beat/
     depends_on:
       celery_worker:
         condition: service_healthy
+    networks:
+      wger_net:
 
-volumes:
-  postgres-data:
-  celery-beat:
-  redis-data:
-
-  # Heads up, if you remove these volumes and use folders directly you need to chown them
-  # to the UID and GID 1000 even if it doesn't exist on your system. Also, they should
-  # be readable by everyone.
-  media:
-  static:
+# ============================================================== #
+# ============================================================== #
 
 networks:
-  default:
-    name: wger_network
+  wger_net:
+    driver: bridge
+
+volumes:
+  wger-static:
+  wger-celery-beat:
+  wger-redis-data:
