--- a/hosts/hyperion/wger.yaml
+++ b/hosts/hyperion/wger.yaml
@@ -23,7 +23,7 @@ services:
       cache:
         condition: service_healthy
     env_file:
-      - ./wger.env
+      - ./wger/wger.env
     volumes:
       - wger-static:/home/wger/static
       - ./wger/media:/home/wger/media
@@ -54,10 +54,10 @@ services:
           cpus: '0.5'
           memory: 128M
     env_file:
-      - ./wger.env
+      - ./wger/wger.env
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=wger
+      - POSTGRES_PASSWORD=wger
       - POSTGRES_DB=wger
       - TZ=America/Denver
     volumes:
@@ -152,7 +152,7 @@ services:
           memory: 256M
     command: /start-worker
     env_file:
-      - ./wger.env
+      - ./wger/wger.env
     volumes:
       - ./wger/media:/home/wger/media
     depends_on:
@@ -184,7 +184,7 @@ services:
           memory: 256M
     command: /start-beat
     env_file:
-      - ./wger.env
+      - ./wger/wger.env
     volumes:
       - wger-celery-beat:/home/wger/beat/
     depends_on:
@@ -196,11 +196,11 @@ services:
 # ============================================================== #
 # ============================================================== #
 
-networks:
-  wger_net:
-    driver: bridge
-
 volumes:
   wger-static:
   wger-celery-beat:
   wger-redis-data:
+
+networks:
+  wger_net:
+    driver: bridge
