Add multi-scrobbler duration parameters

--- a/hosts/galaxy/galaxy.yaml
+++ b/hosts/galaxy/galaxy.yaml
@@ -139,6 +139,8 @@ services:
     environment:
       - TZ=${TIMEZONE}
       - BASE_URL=${MS_BASE_URL}
+      - SOURCE_SCROBBLE_DURATION=40
+      - SOURCE_SCROBBLE_PERCENT=30
       - SUBSONIC_USER=${SUBSONIC_USER}
       - SUBSONIC_PASSWORD=${SUBSONIC_PASSWORD}
       - SUBSONIC_URL=${SUBSONIC_URL}
